k8s/05-eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: travel-agency
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: robert912/eureka-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: travel-agency
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
