k8s/07-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: travel-agency
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: travel/api-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 80
            periodSeconds: 20
---
# NodePort: accesible desde fuera del cluster sin port-forward
# URL externa: http://<minikube-ip>:30090
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: travel-agency
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - port: 8090
      targetPort: 8090
      nodePort: 30090
